--- a/Assignment4/public/index.html
+++ b/Assignment4/public/index.html
@@ -3,7 +3,7 @@
 <body>
     <form id="message-form">
         <input type="text" id="message-input" placeholder="Enter message" autocomplete="off">
-        <button type="submit">Send</button>
+        <button id="sendBtn" type="submit" disabled>Send</button>
     </form>
     <ul id="messages"></ul>
     <script src="/socket.io/socket.io.js"></script>
