--- a/Assignment4/public/index.html
+++ b/Assignment4/public/index.html
@@ -1,12 +1,44 @@
-<html>
-<head></head>
-<body>
-    <form id="message-form">
-        <input type="text" id="message-input" placeholder="Enter message" autocomplete="off">
-        <button id="sendBtn" type="submit" disabled>Send</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chat App</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body class="bg-light d-flex flex-column vh-100">
+
+  
+  <nav class="navbar navbar-dark bg-primary">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">ChatApp</span>
+      <span class="text-white" id="username">Logged in as: User</span>
+    </div>
+  </nav>
+
+  
+  <div class="container my-3 flex-grow-1 d-flex flex-column">
+    <ul id="messages" class="list-group flex-grow-1 overflow-auto mb-3"></ul>
+
+    
+    <form id="message-form" class="input-group">
+      <input type="text" id="message-input" class="form-control" placeholder="Type a message..." autocomplete="off">
+      <button id="sendBtn" type="submit" class="btn btn-primary">Send</button>
     </form>
     <ul id="messages"></ul>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="./connect.js"></script>
+  </div>
+
+  
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="connect.js"></script>
+  <script>
+    fetch("/profile", {
+      headers: { "Authorization": "Bearer " + localStorage.getItem("token") }
+    })
+    .then(res => res.json())
+    .then(data => {
+      document.getElementById("username").textContent = "Logged in as: " + data.username;
+    });
+  </script>
 </body>
 </html>
