--- a/Assignment4/public/login.html
+++ b/Assignment4/public/login.html
@@ -9,9 +9,9 @@
     <h2>Login</h2>
     <form id="loginForm">
         <input type="email" name="email" id="email" placeholder="Email" required><br> <br>
-        <button type="submit">Register</button>
+        <button type="submit">Login</button>
     </form>
-    <p>Already have an account? <a href="login.html">Login</a></p>
+    <p>Don't have an account? <a href="register.html">Login</a></p>
 
     <script src="./login.js"></script>
 </body>
