--- a/Assignment4/public/register.html
+++ b/Assignment4/public/register.html
@@ -8,7 +8,7 @@
 <body>
     <h2>Register</h2>
     <form id="registerForm">
-        <input type="text" name="name" id="name" placeholder="Name" required> <br> <br>
+        <input type="text" name="name" id="username" placeholder="Name" required> <br> <br>
         <input type="email" name="email" id="email" placeholder="Email" required><br> <br>
         <button type="submit">Register</button>
     </form>
