--- a/Assignment4/public/login.html
+++ b/Assignment4/public/login.html
@@ -11,7 +11,7 @@
         <input type="email" name="email" id="email" placeholder="Email" required><br> <br>
         <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="register.html">Login</a></p>
+    <p>Don't have an account? <a href="register.html">Register</a></p>
 
     <script src="./login.js"></script>
 </body>
