--- a/Assignment4/public/register.html
+++ b/Assignment4/public/register.html
@@ -14,6 +14,6 @@
     </form>
     <p>Already have an account? <a href="login.html">Login</a></p>
 
-    
+    <script src="./register.js"></script>
 </body>
 </html>
