bcrypt passwrod added

--- a/Assignment4/public/register.html
+++ b/Assignment4/public/register.html
@@ -10,6 +10,7 @@
     <form id="registerForm">
         <input type="text" name="name" id="username" placeholder="Name" required> <br> <br>
         <input type="email" name="email" id="email" placeholder="Email" required><br> <br>
+        <input type="password" name="password" id="password" required><br> <br>
         <button type="submit">Register</button>
     </form>
     <p>Already have an account? <a href="login.html">Login</a></p>
