--- a/Assignment4/public/login.html
+++ b/Assignment4/public/login.html
@@ -9,6 +9,7 @@
     <h2>Login</h2>
     <form id="loginForm">
         <input type="email" name="email" id="email" placeholder="Email" required><br> <br>
+        <input type="password" name="password" id="password" required><br> <br>
         <button type="submit">Login</button>
     </form>
     <p>Don't have an account? <a href="register.html">Register</a></p>
