--- a/Assignment4/public/register.html
+++ b/Assignment4/public/register.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <h2>Register</h2>
-    <form id="registerForm">
-        <input type="text" name="name" id="username" placeholder="Name" required> <br> <br>
-        <input type="email" name="email" id="email" placeholder="Email" required><br> <br>
-        <input type="password" name="password" id="password" required><br> <br>
-        <button type="submit">Register</button>
-    </form>
+<body class="bg-light d-flex justify-content-center align-items-center vh-100">
+    <div class="card p-4 shadow-sm" style="width: 100%; max-width: 350px;">
+        <h3 class="text-center mb-3 text-primary fw-bold">Register</h3>
+        <form id="registerForm">
+        <input type="text" name="name" id="username" placeholder="Name" class="form-control" required> <br>
+        <input type="email" name="email" id="email" placeholder="Email" class="form-control" required><br> 
+        <input type="password" name="password" id="password" placeholder="password" class="form-control"  required><br>
+        <button type="submit" class="btn btn-primary w-100">Register</button>
+        </form>
+        <br>
     <p>Already have an account? <a href="login.html">Login</a></p>
+    </div>  
 
     <script src="./register.js"></script>
 </body>
