--- a/Assignment4/public/index.html
+++ b/Assignment4/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chat App</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 </head>
 <body class="bg-light d-flex flex-column vh-100">
 
@@ -16,7 +17,7 @@
         <img src="images/appLogo2.png" alt="appLogo" class="img-fluid me-2" style="max-height: 45px; background: transparent;">
         <span class="fw-bold">ChatApp</span></a>
       <div class="d-flex align-items-center">
-        <span class="text-white me-3" id="username">Logged in as: User</span>
+        <h4 class="text-white me-2 mb-0 fw-bold" id="username">User</h4>
         <button class="btn btn-outline-light btn-sm" id="logoutBtn">Logout</button>
       </div>
     </div>
@@ -28,7 +29,7 @@
     
     <form id="message-form" class="input-group d-flex p-2 border-top mb-3">
       <input type="text" id="message-input" class="form-control me-2" placeholder="Type a message..." autocomplete="off">
-      <button id="sendBtn" type="submit" class="btn btn-primary">Send</button>
+      <button id="sendBtn" type="submit" class="btn btn-primary"><i class="fa-solid fa-paper-plane" style="color: #74C0FC;"></i></button>
     </form>
   </div>
 
